Add hand-drawn elements

--- a/src/lib/i18n/de/common.json
+++ b/src/lib/i18n/de/common.json
@@ -2,5 +2,6 @@
   "blog": "Blog",
   "projects": "Projekte",
   "legal": "Impressum & Datenschutz",
+  "looking_for_cv": "Auf der Suche </br> nach meinem Lebenslauf?",
   "coming_soon": "Bald verfügbar"
 }
