--- a/src/lib/i18n/en/common.json
+++ b/src/lib/i18n/en/common.json
@@ -2,5 +2,6 @@
   "blog": "Blog",
   "projects": "Projects",
   "legal": "Legal",
+  "looking_for_cv": "Looking for my CV?",
   "coming_soon": "Coming Soon"
 }
