--- a/src/lib/i18n/en/common.json
+++ b/src/lib/i18n/en/common.json
@@ -3,7 +3,5 @@
   "projects": "Projects",
   "legal": "Legal",
   "looking_for_cv": "Looking for my CV?",
-  "coming_soon": "Coming Soon",
-  "title": "Welcome to SvelteKit",
-  "text": "Visit <a href=\"{{link}}\">kit.svelte.dev</a> to read the documentation"
+  "coming_soon": "Coming Soon"
 }
