Publishing v1 of wassererbe

--- a/src/routes/(content)/blog/content/montgolfiere.mdx
+++ b/src/routes/(content)/blog/content/montgolfiere.mdx
@@ -1,6 +1,6 @@
 ---
-title: Montgolfière
-subtitle: (Luft-) Schiffe versenken
+title: "Montgolfière: Luftschiffe versenken"
+subtitle: Konzeptstudie eines 3D-Strategiespiels
 date: 2025-01-04
 tags:
   - threejs
@@ -8,11 +8,9 @@ tags:
   - svelte
   - 3d
 preview: Montgolfière greift das klassische Konzept von "Schiff versenken" auf, bringt es jetzt ich das Zeitalter einer alternativen Steampunk-Renaissance und erweiter das Spielkonzept um eine dritte Dimension.
-previewImageUrl: https://imagedelivery.net/JEc1YLA5ZSivE42ux7pbDw/c02fa871-ceea-45c5-ea5d-ce245ae06900
-published: true
+previewImageUrl: https://imagedelivery.net/JEc1YLA5ZSivE42ux7pbDw/c02fa871-ceea-45c5-ea5d-ce245ae06900/h=400
+published: false
 ---
-
-# **Montgolfière: Konzeptstudie eines 3D-Strategiespiels**
 
 Montgolfière ist eine Konzeptstudie aus meinem Studienjahr 2021, die das klassische Spiel „Schiffe Versenken“ in ein dreidimensionales, webbasiertes Format überträgt. Das Projekt vereint innovative Spielmechaniken mit einer anspruchsvollen visuellen Gestaltung und einem durchdachten Designansatz. Ziel war es, das Potenzial eines modernen, modular aufgebauten Strategiespiels zu untersuchen, das auf aktuelle technische Standards und ästhetische Trends zugeschnitten ist.
 ![Screenshot von der 3D Visualisierung des Schlachtfelds](https://imagedelivery.net/JEc1YLA5ZSivE42ux7pbDw/c02fa871-ceea-45c5-ea5d-ce245ae06900/h=400)
