--- a/src/routes/(content)/blog/content/wassererbe.mdx
+++ b/src/routes/(content)/blog/content/wassererbe.mdx
@@ -37,8 +37,8 @@ Hierzu greife ich die Geschichte von 5 Stadtteilen auf: dem Hochablass, dem Lech
 	href="https://wassererbe.de"
 	target="_blank"
 >
-	<i class="fa-regular fa-circle-exclamation mr-2 text-lg text-skin-500"></i>
-	Die Visualisierung findest du unter <u class="ml-1">wassererbe.de</u>
+	<i class="fa-regular fa-globe-pointer mr-2 text-lg"></i>
+	Besuche <u class="ml-1">wassererbe.de</u>
 </a>
 
 ### Datenakquise
@@ -173,14 +173,22 @@ So ist es möglich, jede Zone und jeden Kanal programmatisch anzusprechen und je
 
 Zum Abschluss des Semesters stellte ich das Projekt den Mitarbeitern des Welterbe-Infozentrums und Studenten & Professoren der Hochschule Luzern vor. Das Projekt erhielt ausgezeichnete Resonanz.
 
-<div class="mt-20 flex justify-center">
+<div class="mt-20">
 	<a
 		href="https://wassererbe.de"
 		target="_blank"
-		class="w-max rounded-md bg-white-600 p-10 text-center text-lg no-underline"
+		class="mx-auto flex items-center justify-center gap-4 rounded-md bg-white-600 p-10 no-underline max-sm:flex-col sm:gap-10"
 	>
-		Besuche <span class="underline">wassererbe.de</span> um zu erfahren, wie sich die Geschichte von Augsburg seit Ende
-		der Neuzeit dank intensiver Wassernutzung verändert
+		<i class="fa-regular fa-globe-pointer text-4xl"></i>
+		<span class="max-sm:text-center">
+			<span class="text-2xl">
+				Besuche <span class="underline">wassererbe.de</span>
+			</span>
+			<br />
+			<span class="text-md leading-none">
+				und erfahren, wie sich von Augsburg seit Ende der Neuzeit dank intensiver Wassernutzung verändert
+			</span>
+		</span>
 	</a>
 </div>
 
