minor text updates

--- a/src/routes/(content)/blog/content/wassererbe.mdx
+++ b/src/routes/(content)/blog/content/wassererbe.mdx
@@ -9,7 +9,7 @@ tags:
   - historic data
   - svelte
 published: true
-preview: Augsburg ist seit jeher eine vom Wasser geprägte Stadt. Im Rahmen meines Studiums erstellte ich eine interaktive Website zur Entwicklung der Stadt aufgrund von Wassernutzung.
+preview: Augsburg ist seit jeher eine vom Wasser geprägte Stadt. Im Rahmen meines Studiums erstellte ich eine interaktive Website zur Entwicklung der Stadt dank Wassernutzung.
 previewImageUrl: https://imagedelivery.net/JEc1YLA5ZSivE42ux7pbDw/538704fa-b8d7-42ef-a9f3-7fed59c8b500/h=300
 ---
 
