--- a/src/routes/(content)/blog/content/wassererbe.mdx
+++ b/src/routes/(content)/blog/content/wassererbe.mdx
@@ -44,8 +44,8 @@ Hierzu greife ich die Geschichte von 5 Stadtteilen auf: dem Hochablass, dem Lech
 ### Datenakquise
 
 Nach eingängiger Recherche und Gesprächen mit Mitarbeitern des Welterbe-Infozentrums entschied ich mich dazu,
-für die Geschichten der Stadtteile auf dem Inhalt von Büchern zu basieren.
-Gerade der BayernAtlas erwies sich als unbezahlbare Quelle. Unter der [Open Data Initiative](https://open.bydata.de/home?locale=de) hat das Bundesland Bayern historisches Kartenmaterial bis zurück ins Jahr 1890 über den [BayernAtlas](https://atlas.bayern.de/?c=639936,5359312&z=14&r=0&l=historisch&t=ba) frei zugänglich gemacht.
+die Historie der Stadtteile auf Fachbüchern zu entnehmen.
+Unter der [Open Data Initiative](https://open.bydata.de/home?locale=de) hat das Bundesland Bayern historisches Kartenmaterial bis zurück ins Jahr 1890 über den [BayernAtlas](https://atlas.bayern.de/?c=639936,5359312&z=14&r=0&l=historisch&t=ba) frei zugänglich gemacht.
 Diese Karten dienten als Informationsbasis zur Einordnung der Flächennutzung.
 
 <div class="flex flex-col sm:flex-row justify-evenly items-center">
@@ -55,7 +55,7 @@ Diese Karten dienten als Informationsbasis zur Einordnung der Flächennutzung.
 
 ### Standardisierung und Klassifizierung der Daten
 
-Um die Flächennutzung historisch betrachten zu könnten, musste ich zunächst das unterschiedliche, zum Teil noch per Hand gezeichnete, Kartenmaterial übereinanderlegen und abgleichen. Hier zeigte sich, dass gerade bei älteren Karten kleine geografische Unterschiede zu moderneren Karten nach 1980 auftreten.
+Um die Flächennutzung historisch betrachten zu können, musste ich zunächst das unterschiedliche, zum Teil noch per Hand gezeichnete, Kartenmaterial übereinanderlegen und abgleichen. Hier zeigte sich, dass gerade bei älteren Karten kleine geografische Unterschiede zu moderneren Karten nach 1980 auftreten.
 Mithilfe von markanten historischen Gebäuden gelang es mir, die Karten deckungsgleich zu platzieren.
 
 <div class="flex justify-center">
@@ -68,7 +68,7 @@ Mithilfe von markanten historischen Gebäuden gelang es mir, die Karten deckungs
 </div>
 
 Als Nächstes galt es, ein geeignetes Raster zur Nutzungsklassifizierung einzelner Zonen zu finden.
-Grundsätzlich bieten sich zwei verschiedene Formen an, welche nahtlos ohne das Entstehen von Lücken aneinander gereiht werden können:
+Grundsätzlich bieten sich zwei verschiedene Formen an, welche nahtlos ohne das Entstehen von Lücken aneinandergereiht werden können:
 das Rechteck und das Hexagon. Erste Tests zeigten, dass während ein Quadratraster eine leicht bessere Übersichtlichkeit bietet, sich mithilfe eines Hexagonmusters die organischen Gegebenheiten im Flusslauf und Stadtwachstum genauer darstellen lassen:
 
 <div class="flex flex-col sm:flex-row justify-evenly items-center">
