minor textual improvements

--- a/src/routes/(content)/blog/content/wassererbe.mdx
+++ b/src/routes/(content)/blog/content/wassererbe.mdx
@@ -20,8 +20,7 @@ previewImageUrl: https://imagedelivery.net/JEc1YLA5ZSivE42ux7pbDw/538704fa-b8d7-
 
 Augsburg ist seit jeher eine von Wasser geprägte Stadt.
 Mit über 530 Brücken und einem weitverzweigten Netz aus 100 Kilometern Kanälen erzählt das Stadtbild von einer engen Verbindung zu dieser lebenswichtigen Ressource.
-Anlässlich der [Auszeichnung als UNESCO-Welterbe](https://wassersystem-augsburg.de/de) habe ich im Rahmen des Kurses „Datenvisualisierung“ im Studiengang „Interaktive Mediensysteme“
-an der Technischen Hochschule Augsburg das Zusammenspiel von Stadt und Wasser erlebbar gemacht.
+Anlässlich der [Auszeichnung als UNESCO-Welterbe](https://wassersystem-augsburg.de/de) habe ich im Rahmen meines Studiums „Interaktive Mediensysteme“ das Zusammenspiel von Stadt und Wasser erlebbar gemacht.
 
 <!-- <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/A_mx7ZHZ6bg?si=SGS9M2lsGhLCqgCL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> -->
 
@@ -30,7 +29,13 @@ einzelne Stadtteile genauer zu betrachten und jeweils den historischen geprägte
 
 In Augsburg gibt es mehrere historische, zur Wassernutzung gebaute Bauwerke, welche heute noch das Stadtbild prägen.
 Mit meinem Projekt „Wassererbe Augsburg“ möchte ich aufzeigen, wie sich die Stadt über die letzten 100 Jahre durch das Wasser verändert hat.
-Hierzu greife ich die Geschichte von 5 Stadtteilen auf: dem Hochablass, dem Lechviertel, dem Textilviertel, dem Proviantbachquartier und dem Herrenbachviertel.
+Hierzu greife ich die Geschichte von 5 Stadtteilen auf:
+
+- dem Hochablass
+- dem Lechviertel
+- dem Textilviertel
+- dem Proviantbachquartier
+- dem Herrenbachviertel
 
 <a
 	class="flex w-max items-center rounded-md bg-white-600 px-4 py-3 no-underline"
@@ -44,7 +49,7 @@ Hierzu greife ich die Geschichte von 5 Stadtteilen auf: dem Hochablass, dem Lech
 ### Datenakquise
 
 Nach eingängiger Recherche und Gesprächen mit Mitarbeitern des Welterbe-Infozentrums entschied ich mich dazu,
-die Historie der Stadtteile auf Fachbüchern zu entnehmen.
+die Historie der Stadtteile aus Fachbüchern zu entnehmen.
 Unter der [Open Data Initiative](https://open.bydata.de/home?locale=de) hat das Bundesland Bayern historisches Kartenmaterial bis zurück ins Jahr 1890 über den [BayernAtlas](https://atlas.bayern.de/?c=639936,5359312&z=14&r=0&l=historisch&t=ba) frei zugänglich gemacht.
 Diese Karten dienten als Informationsbasis zur Einordnung der Flächennutzung.
 
@@ -171,7 +176,10 @@ So ist es möglich, jede Zone und jeden Kanal programmatisch anzusprechen und je
 	</div>
 </div>
 
-Zum Abschluss des Semesters stellte ich das Projekt den Mitarbeitern des Welterbe-Infozentrums und Studenten & Professoren der Hochschule Luzern vor. Das Projekt erhielt ausgezeichnete Resonanz.
+--
+
+Das Projekt erhielt ausgezeichnete Resonanz. Neben einer sehr guten Note, bot sich mir die Möglichkeit das Projekt den Mitarbeitern des Welterbe-Infozentrums und Studenten & Professoren der Hochschule Luzern vor.
+Vielen Dank an Herrn Professor Stoll für diese Gelegenheit.
 
 <div class="mt-20">
 	<a
