--- a/src/routes/(content)/blog/content/wassererbe.mdx
+++ b/src/routes/(content)/blog/content/wassererbe.mdx
@@ -130,7 +130,7 @@ Um dem Betrachter meiner Visualisierung die Verortung einzelner Stadtteile zu er
 		<img
 			src="https://imagedelivery.net/JEc1YLA5ZSivE42ux7pbDw/c3fe9a73-d5ad-4d64-c26f-70caab7da300/h=500"
 			class="max-h-[500px]"
-			alt="Augsburg als Radierung von Franz Hogenberg aus dem späten 16. Jahrhundert"
+			alt="Stadtlegende für Wassererbe"
 		/>
 	</div>
 </div>
@@ -146,7 +146,7 @@ Um meine Erkenntnisse zu präsentieren, entwickelte ich eine Website mithilfe vo
 Das erarbeitete Raster wurde als SVG-Grafik in die Website eingebettet. Jede Zone hat eine einzigartige ID, welche sie in einem X/Y-Koordinatensystem eindeutig zuordnen lässt.
 Außerdem besitzt jede Zone eine fortlaufende Nummer. Die Kanäle wurden eindeutig namentlich identifiziert.
 
-<Image src="https://imagedelivery.net/JEc1YLA5ZSivE42ux7pbDw/79d123fb-6d51-494e-6e0f-3a2d35890500/h=280" maxH=280 alt="Identifizierung der SVG Polygone nach X_Y_Index" />
+<Image src="https://imagedelivery.net/JEc1YLA5ZSivE42ux7pbDw/79d123fb-6d51-494e-6e0f-3a2d35890500/h=280" height=280 alt="Identifizierung der SVG Polygone nach X_Y_Index" />
 
 So ist es möglich, jede Zone und jeden Kanal programmatisch anzusprechen und je nach ausgewähltem Jahr einzufärben:
 
