add parley text

--- a/src/routes/(content)/blog/content/obacht.mdx
+++ b/src/routes/(content)/blog/content/obacht.mdx
@@ -1,7 +1,8 @@
 ---
 title: Obacht! Anonymes Personentracking
 subtitle: LiDAR-basiertes Personentracking für Anwendungsfälle im öffentlichen Raum
-date: 2025-01-11
+slug: Obacht! Anonymes Personentracking
+date: 2025-01-06
 tags:
   - lidar
   - ml
