add timeframes, add back to top, fix first back button missing

--- a/src/routes/(content)/blog/content/obacht.mdx
+++ b/src/routes/(content)/blog/content/obacht.mdx
@@ -3,6 +3,9 @@ title: Obacht! Anonymes Personentracking
 subtitle: LiDAR-basiertes Personentracking für Anwendungsfälle im öffentlichen Raum
 slug: Obacht! Anonymes Personentracking
 date: 2025-01-06
+timeframe:
+  - 2020-01
+  - 2022-02
 tags:
   - lidar
   - ml
