--- a/src/routes/(content)/blog/content/parley.mdx
+++ b/src/routes/(content)/blog/content/parley.mdx
@@ -3,6 +3,9 @@ title: Hey Parley! Packlist Community
 subtitle: Ein soziales Enzyklopädie für effizientes Packen
 slug: Hey Parley! Packlist Community
 date: 2024-12-24
+timeframe:
+  - 2022-09
+  - 2023-02
 tags:
   - cloudflare workers
   - social network
@@ -11,7 +14,7 @@ tags:
   - information design
 published: true
 preview: Parley verbindet das Konzept eines sozialen Netzwerks mit einer kollaborativen Enzyklopädie für effizientes Packen. Die Plattform nutzt moderne Serverless-Technologien und eine innovative Visualisierung der Packplanung, um Nutzern zu helfen, von den Erfahrungen anderer zu lernen und ihre Ausrüstung optimal zu organisieren.
-previewImageUrl: https://imagedelivery.net/JEc1YLA5ZSivE42ux7pbDw/31879e3c-e54a-4b2e-9113-6223f7c50900/h=300
+previewImageUrl: https://imagedelivery.net/JEc1YLA5ZSivE42ux7pbDw/0e9df3b3-2988-4b10-b868-e0891796d000/h=300
 ---
 
 <script lang="ts">import Image from "$lib/components/Blog/Image.svelte";</script>
