--- a/src/routes/(content)/blog/content/wassererbe.mdx
+++ b/src/routes/(content)/blog/content/wassererbe.mdx
@@ -3,6 +3,9 @@ title: Wassererbe Augsburg
 subtitle: Interaktive Website zur Entwicklung der Wassernutzung einer Stadt
 slug: Wassererbe Augsburg
 date: 2025-01-02
+timeframe:
+  - 2021-09
+  - 2022-01
 tags:
   - data journalism
   - information design
